added chapter on infra models for germany

--- a/tex_files/bib-refs.bib
+++ b/tex_files/bib-refs.bib
@@ -633,3 +633,11 @@ outbreak in Germany},
     pages = {1--31},
     url = {http://www.jstatsoft.org/v63/i20/},
   }
+  
+  @Article{inlautils,
+    author = {Dave W Redding and Tim C D Lucas and Tim Blackburn and Kate E Jones},
+    title = {Evaluating Bayesian spatial methods for modelling species distributions with clumped and restricted occurrence data},
+    journal = {PLoS ONE},
+    year = {2017},
+    url = {https://doi.org/10.1371/journal.pone.0187602},
+  }
